# swagger-pet-tester

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
api/: __init__.py  client.py  pet_api.py  store_api.py  user_api.py
config/: settings.py
data/: pet_data.json
models/: __init__.py  api_response.py  examples.py  order.py  pet.py  user.py
tests/: __init__.py  conftest.py  test_pet.py  test_store.py  test_user.py
utils/: __init__.py  assertions.py  constants.py  generators.py  logger.py
